--- a/shop/templates/shop/detail.html
+++ b/shop/templates/shop/detail.html
@@ -1,8 +1,11 @@
- <h1> Nom de l'article : {{ product.name }} <br> </h1>
-
+<h1> Nom de l'article : {{ product.name }} <br> </h1>
+<img src="{{ product.image }}" alt="image">
 <p> Description : {{ product.description }} <br> </p>
 <h2> Prix : {{ product.price }} <br> </h2>
 <p> Quantité : {{ product.quantity }} <br> </p>
 
 <a href="update">Update</a>
 <a href="delete">Delete</a>
+
+
+
