--- a/caprisun/templates/caprisun/index.html
+++ b/caprisun/templates/caprisun/index.html
@@ -1,3 +1,5 @@
+
+
 {% if listQ %}
     <ul>
     {% for question in listQ %}
@@ -8,6 +10,7 @@
     <p>No polls are available.</p>
 {% endif %}
 
+<p>TEST</p>
 
 <form action=" " method="post">
     {% csrf_token %}
