--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -2,8 +2,10 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'shop/style.css' %}">
 
-
-
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% bootstrap_messages %}
 
 {% if listProduct %}
     <ul>
@@ -17,12 +19,13 @@
     <p>No polls are available.</p>
 {% endif %}
 
+<p class="text-warning">oui</p>
 
-<p>BOLOSS</p>
+
 
 
 <form action=" " method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" class="btn btn-primary mb-3">
 </form>
