--- a/shop/templates/shop/update.html
+++ b/shop/templates/shop/update.html
@@ -1,3 +1,14 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'shop/style.css' %}">
+
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% bootstrap_messages %}
+
+
+
 <h1>Modifier l'article</h1>
 <form action=" " method="post">
     {% csrf_token %}
