--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -4,10 +4,26 @@
     <meta charset="utf-8"/>
     <title>Chat Room</title>
 </head>
+
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% bootstrap_messages %}
+
 <body>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-    <input id="chat-message-input" type="text" size="100"><br>
-    <input id="chat-message-submit" type="button" value="Send">
+
+    <h1 class="text-primary text-center mt-5">Chat</h1>
+    <div class="w-50 m-auto mt-5">
+        <textarea id="chat-log" rows="20" class="w-100 text-primary p-2"></textarea> 
+        <div class="d-flex w-100 justify-content-between">
+            <input id="chat-message-input" type="text" style="border-right: 0;border-left: 0;width: 90%;" class="border-primary border-top-0 border-left-0"><br>
+            <svg xmlns="http://www.w3.org/2000/svg" id="chat-message-submit" style="cursor: pointer;" width="32" height="32" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
+                <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"/>
+            </svg>
+        </div>
+
+    </div>
+
     {{ room_name|json_script:"room-name" }}
     <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
@@ -19,8 +35,7 @@
             + roomName
             + '/'
         );
-
-        // onmessage - An event listener to be called when a message is received from the server.
+// onmessage - An event listener to be called when a message is received from the server.
         chatSocket.onmessage = function(e) {
             // JSON.parse() converts the JSON object back into the original object,
             // then examine and act upon its contents.
