--- a/shop/templates/shop/detail.html
+++ b/shop/templates/shop/detail.html
@@ -7,19 +7,20 @@
 {% bootstrap_javascript %}
 {% bootstrap_messages %}
 
+<div style="width: 30%; border: 2px solid black; margin: 5% auto; box-shadow: 12px 12px 2px 1px #0dcaf0;">
+<h1 style="text-align: center;"> {{ product.name }} <br> </h1>
+<div style="margin: 0 auto; width: 40%;"><img src="{{ product.image }}" alt="image" style="width: 100%; border-radius: 100%;"></div>
+<p style="margin-top: 7%; margin-left: 4%;"> <span style="font-weight: 800;">Description :</span> <br> {{ product.description }} <br> </p>
+<p style="margin-top: 7%; margin-left: 4%;"> <span style="font-weight: 800;">Quantité :</span> <br> {{ product.quantity }} restants <br> </p>
+<h2 style="font-size: 1.5em; margin-right: 5%;" class="d-grid justify-content-end"> Prix : {{ product.price }}€<br> </h2>
 
-<h1> Nom de l'article : {{ product.name }} <br> </h1>
-<img src="{{ product.image }}" alt="image">
-<p> Description : {{ product.description }} <br> </p>
-<h2> Prix : {{ product.price }} <br> </h2>
-<p> Quantité : {{ product.quantity }} <br> </p>
-
-<form action="update" method="post">
+<form action="update" method="post" style="margin: 0 auto;">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit"  class="btn btn-primary mb-3" style="margin-top: 10px;" >
 </form>
 
-<!-- <a href="update">Update</a> -->
-
-<button class="btn btn-danger btn-sm" style="padding: 10px 5px"><a href="delete" style="color: white; border: none; text-decoration: none;">Delete</a></button>
+</div>
+<div style="width: 100%; display: flex; justify-content: center;">
+    <button class="btn btn-danger btn-sm" style="padding: 10px 20px;"><a href="delete" style="color: white; border: none; text-decoration: none;">Supprimer ce produit</a></button>
+</div>
