--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -31,9 +31,9 @@
             <p style="font-size: 12px; padding-left: 2%;">Quantité : <span style="color: #0dcaf0; font-weight: 800;">{{ product.quantity }}</span></p>
             <div class="d-grid justify-content-end">
             <p style="font-size: 12px; font-weight: 800; margin-right: 10px;"> Prix: {{ product.price }}€</p>
-            <button class="btn btn-dark btn-sm" style="margin-right: 10px; margin-bottom: 5px;"><a href="/shop/{{ product.id }}/" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-bag" viewBox="0 0 16 16" class="bg-info">
+            <a href="/shop/{{ product.id }}/" style="margin-right: 1px;"><button class="btn btn-dark btn-sm" style=" margin-bottom: 5px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-bag" viewBox="0 0 16 16" class="bg-info">
                 <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
-              </svg></a></button>
+              </svg></button></a>
             </div>
         </li>
     {% endfor %}
