--- a/shop/templates/shop/detail.html
+++ b/shop/templates/shop/detail.html
@@ -17,7 +17,7 @@
 <form action="update" method="post" style="margin: 0 auto;">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Submit"  class="btn btn-primary mb-3" style="margin-top: 10px;" >
+    <input type="submit" value="Acheter"  class="btn btn-primary mb-3" style="margin-top: 10px;" >
 </form>
 
 </div>
