--- a/shop/templates/shop/create.html
+++ b/shop/templates/shop/create.html
@@ -13,5 +13,5 @@
 <form action=" " method="post" style="margin: 10px auto;">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Submit" class="btn btn-primary mb-3" style="margin-top: 10px;">
+    <input type="submit" value="Ajouter" class="btn btn-primary mb-3" style="margin-top: 10px;">
 </form>
